syntax = "proto3";

import "com/sunya/electionguard/protogen/common.proto";

option java_package = "com.sunya.electionguard.protogen";
option java_outer_classname = "RemoteKeyCeremonyProto";

service RemoteKeyCeremonyService {
  rpc registerTrustee (RegisterKeyCeremonyTrusteeRequest) returns (RegisterKeyCeremonyTrusteeResponse) {}
}

message RegisterKeyCeremonyTrusteeRequest {
  string guardian_id = 1; // the KeyCeremonyTrustee's id
  string remote_url = 2;  // the KeyCeremonyTrustee's url
}

message RegisterKeyCeremonyTrusteeResponse {
  string guardian_id = 1; // echoed from the request
  uint32 guardian_x_coordinate = 2; // assign the KeyCeremonyTrustee's xcoordinate
  uint32 quorum = 3; // tell the KeyCeremonyTrustee what the quorum size is.
  string error = 4; // error if not empty
}
